intentando interactuar con html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1 id="Carrera">
+            Carrera: 
+       <div id="course">
+
+       </div>
+        </section>
+     
+    </header>
 
 
 
+    <script src="./js/db.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
+
