--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <header>
         <h1 id="Carrera">
             Carrera: 
+        </h1>
        <div id="course">
 
        </div>
-        </section>
+        
      
     </header>
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="./js/db.js"></script>
     <script src="./js/main.js"></script>
 </body>
