--- a/seleccionados.html
+++ b/seleccionados.html
@@ -11,7 +11,7 @@
         
     </header>
         <main class="container py-3">
-            <h1 class="text-center display-6">Materias</h1>
+            <h1 class="text-center display-6">Materias Seleccionadas</h1>
             <div id="materias" class="row"></div>
     </main>
     <footer class="container py-3">
@@ -21,14 +21,14 @@
         </div>
      </div>
      <div class="col-md-6 d-flex align-items-center justify-content-end">
-        <a href="/seleccionados.html" id="boton-carrito" title="Ir a seleccionados">Materias Seleccionadas</a>
+        <a href="#" id="boton-carrito" title="Ir a seleccionados">Materias Seleccionadas</a>
      </div>
 
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/db.js"></script>
-    <script src="/js/index.js"></script>
+    <script src="/js/seleccionados.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
  
